8209396: Make PtrQueueSets not statically allocated

Change the G1BarrierSet PtrQueueSet static members to ordinary members.

Reviewed-by: shade, tschatzl, rkennke